# bfc

./: .gitignore  .shortbytes  BFS.hs  BfIR.hs  BfQQ.hs  CodeGenerator.hs  LICENSE  Main.hs  Makefile  Minimize.hs  Parser.hs  README.md  ShortBytes.hs  TapeAllocation.hs  Types.hs  bfc.cabal  euler2.p
samples/: euler1.bf  euler1.p
src/: CodeGenerator.hs  Main.hs  ParserQQ.hs  ShortBytes.hs  TapeAllocation.hs
