Name:                bfc
Version:             0.1
Synopsis:            BFC
License:             BSD3
License-file:        LICENSE
Author:              Marko Bencun
Maintainer:          mbencun@gmail.com
Category:            Application
Build-type:          Simple
Cabal-version:       >=1.2


Executable bfc
  Main-is:             Main.hs
  -- needed for `make install-prof`, not sure why.
  Extensions: TemplateHaskell
  Build-depends:       base,
                       bytestring, dlist, 
                       template-haskell,
                       MissingH,
                       containers,
                       unordered-containers,
                       parsec,
                       attoparsec,
                       lens,
                       tardis,
                       mtl,
                       hashable,
                       digits,
                       arithmoi,
                       binary,
                       directory,
                       array
  Ghc-options:         -O2 -Wall -rtsopts -fforce-recomp 
